# TLM-APP

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES.md  TLM_Mobile.py  build-local-apk.ps1  flet.yaml  main.py  pyproject.toml
.github/workflows/: build-app.yml  build.yml
src/: main.py
