[project]
name = "tlm-app"
version = "2.1.3"
description = "A Flet-based TLM calculator and laboratory timer app."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CuiMiller" }
]
dependencies = [
    "flet==0.85.3"
]

[tool.flet]
org = "com.cuimiller"
product = "TLM APP"
company = "CuiMiller Lab"
copyright = "Copyright (C) 2026 by CuiMiller"

[tool.flet.app]
path = "src"
