[project]
name = "tlm-app"
version = "2.1.11"
description = "A Flet-based TLM calculator and laboratory timer app."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "CuiMiller" }
]
dependencies = []

[tool.flet]
org = "com.cuimiller"
product = "TLM APP"
company = "CuiMiller Lab"
copyright = "Copyright (C) 2026 by CuiMiller"
build_number = 4

[tool.flet.app]
path = "src"

[tool.flet.android]
dependencies = [
    "flet==0.28.3",
    "pillow==10.4.0"
]

[tool.flet.android.permission]
"android.permission.READ_EXTERNAL_STORAGE" = true
"android.permission.WRITE_EXTERNAL_STORAGE" = true
"android.permission.READ_MEDIA_IMAGES" = true
"android.permission.MANAGE_EXTERNAL_STORAGE" = true

[tool.flet.flutter]
build_args = [
    "--target-platform",
    "android-arm64"
]
